--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
 <section id="contact">
 	<div class="inner">
 		<section>
-			<form action="https://formspree.io/{{ site.email }}" method="POST">
+			<form action="https://formspree.io/f/mdobwedg" method="POST">
+				<!-- <form action="https://formspree.io/f/mdobwedg" method="POST"></form> -->
 				<div class="field half first">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" />
@@ -31,31 +32,34 @@
 			</section>
 			<section>
 				<div class="contact-method">
-					<span class="icon alt fa-phone"></span>
-					<h3>Phone</h3>
-					<a href="tel:{{ site.phone }}">{{ site.phone }}</a>
+					<span class="icon alt fa-linkedin"></span>
+					<h3>Linkedin</h3>
+					<!-- <a href="tel:{{ site.phone }}">{{ site.phone }}</a> -->
+					<a href="https://www.linkedin.com/in/jooyoung-oh">https://www.linkedin.com/in/jooyoung-oh</a>
+
 				</div>
 			</section>
 			<section>
 				<div class="contact-method">
-					<span class="icon alt fa-home"></span>
-					<h3>Address</h3>
+					<span class="icon alt fa-github"></span>
+					<h3>Github</h3>
 					<span>
-					{% if site.street_address %}
+					<!-- {% if site.street_address %}
 					    {{ site.street_address }}<br />
 					{% endif %}
 					{% if site.city %}
 					    {{ site.city }},
 					{% endif %}
 					{% if site.state %}
-					    {{ site.state }} 
+					    {{ site.state }}
 					{% endif %}
 					{% if site.zip_code %}
 					    {{ site.zip_code }}<br />
 					{% endif %}
 					{% if site.country %}
 					    {{ site.country }}
-					{% endif %}
+					{% endif %} -->
+					<a href={{site.street_address}}>https://github.com/7ooyoungoh</a>
 					</span>
 				</div>
 			</section>
@@ -64,35 +68,34 @@
 </section>
 
 <!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-			<ul class="icons">
-				{% for key_value in site.socials %}
-					{% if key_value[1] %}
-						<li>
-							<a href="{{ key_value[1] }}" class="icon alt fa-{{ key_value[0] | downcase }}" target="_blank" rel="noopener noreferrer" aria-label="{{ key_value[0] }}">
-								<span class="label">{{ key_value[0] }}</span>
-							</a>
-						</li>
-					{% endif %}
-				{% endfor %}
-			</ul>
-			<ul class="copyright">
-				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
-				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
-				<li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a></li>
+<footer id="footer">
+	<div class="inner">
+		<ul class="icons">
+			{% for key_value in site.socials %}
+			{% if key_value[1] %}
+			<li>
+				<a href="{{ key_value[1] }}" class="icon alt fa-{{ key_value[0] | downcase }}" target="_blank" rel="noopener noreferrer" aria-label="{{ key_value[0] }}">
+					<span class="label">{{ key_value[0] }}</span>
+				</a>
+			</li>
+			{% endif %}
+			{% endfor %}
+		</ul>
+		<ul class="copyright">
+			<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
+			<!-- <li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
+            <li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a></li> -->
 
-			</ul>
-		</div>
-	</footer>
-
+		</ul>
+	</div>
+</footer>
 </div>
 
 <!-- Scripts -->
-	<script src="{{ "assets/js/jquery.min.js" | absolute_url }}"></script>
-	<script src="{{ "assets/js/jquery.scrolly.min.js" | absolute_url }}"></script>
-	<script src="{{ "assets/js/jquery.scrollex.min.js" | absolute_url }}"></script>
-	<script src="{{ "assets/js/skel.min.js" | absolute_url }}"></script>
-	<script src="{{ "assets/js/util.js" | absolute_url }}"></script>
-	<!--[if lte IE 8]><script src="{{ "assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
-	<script src="{{ "assets/js/main.js" | absolute_url }}"></script>
+<script src="{{ "assets/js/jquery.min.js" | absolute_url }}"></script>
+<script src="{{ "assets/js/jquery.scrolly.min.js" | absolute_url }}"></script>
+<script src="{{ "assets/js/jquery.scrollex.min.js" | absolute_url }}"></script>
+<script src="{{ "assets/js/skel.min.js" | absolute_url }}"></script>
+<script src="{{ "assets/js/util.js" | absolute_url }}"></script>
+<!--[if lte IE 8]><script src="{{ "assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
+<script src="{{ "assets/js/main.js" | absolute_url }}"></script>
