--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
                 <span
                         class="txt-rotate"
                         data-period="2000"
-                        data-rotate='[ "Jooyoung Oh", "a CS Student", "a Software Developer", "in need of sleep...zzzzz" ]'></span>
+                        data-rotate='[ "Jooyoung Oh.", "an Engineer.", "in need of sleep!" ]'></span>
             </h1>
         </header>
         <div class="content">
