--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -6,21 +6,28 @@
 
 /* Main */
 
-	#main {
-		background-color: _palette(bg-alt);
+#main {
+	background-color: _palette(bg-alt);
 
-		> * {
-			border-top: solid 1px _palette(border);
+	> * {
+		border-top: solid 1px _palette(border);
 
-			&:first-child {
-				border-top: 0;
-			}
-
-			@include inner;
+		&:first-child {
+			border-top: 0;
 		}
 
-		&.alt {
-			background-color: transparent;
-			border-bottom: solid 1px _palette(border);
-		}
+		@include inner;
 	}
+
+	&.alt {
+		background-color: transparent;
+		border-bottom: solid 1px _palette(border);
+	}
+}
+
+#two {
+	background-image: url("../images/deering_op.png");
+	background-position: center;
+}
+
+
