--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,17 +27,18 @@
         <div class="content">
             <p style="text-transform: uppercase;">{{ site.description }}</p>
             <ul class="actions">
-                <li><a href="https://github.com/7ooyoungoh" class="icon alt fa-github"></a></li>
-                <li><a href="https://linkedin.com/in/jooyoung-oh" class="icon alt fa-linkedin"></a></li>
                 <li><a href="assets/Resume-.pdf" class="button icon fa-download" target="_blank" rel="noopener noreferrer" download="Resume-"">Resume</a></li>
+                <li><a href="https://github.com/7ooyoungoh" class="icon alt fa-github" target="_blank"></a></li>
+                <li><a href="https://linkedin.com/in/jooyoung-oh" class="icon alt fa-linkedin" target="_blank"></a></li>
+                <li><a href="#two" class="icon alt fa-graduation-cap scrolly"></a></li>
                 <!-- <li><a href="my-resume.html" class="icon alt fa-file"></a></li> -->
             </ul>
         </div>
-        <div class="content">
-            <ul class="actions">
-                <li><a href="#one" class="button next scrolly">Take a look</a></li>
-            </ul>
-        </div>
+<!--        <div class="content">-->
+<!--            <ul class="actions">-->
+<!--                <li><a href="#two" class="button next scrolly">Take a look</a></li>-->
+<!--            </ul>-->
+<!--        </div>-->
     </div>
 </section>
 
