--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@
         <div class="content">
             <p style="text-transform: uppercase;">{{ site.description }}</p>
             <ul class="actions">
-                <li><a href="assets/Resume-.pdf" class="button icon fa-download" target="_blank" rel="noopener noreferrer" download="Resume-"">Resume</a></li>
+                <li><a href="assets/Resume-JOH.pdf" class="button icon fa-download" target="_blank" rel="noopener noreferrer" download="Resume-JOH"">Resume</a></li>
                 <li><a href="https://github.com/7ooyoungoh" class="icon alt fa-github" target="_blank"></a></li>
                 <li><a href="https://linkedin.com/in/jooyoung-oh" class="icon alt fa-linkedin" target="_blank"></a></li>
                 <li><a href="#two" class="icon alt fa-graduation-cap scrolly"></a></li>
