--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,22 +27,22 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Email</h3>
-					<a href="mailto:{{ site.email }}">{{ site.email }}</a>
+					<a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
 				</div>
 			</section>
 			<section>
 				<div class="contact-method">
 					<span class="icon alt fa-linkedin"></span>
-					<h3>Linkedin</h3>
+					<h3>LinkedIn</h3>
 					<!-- <a href="tel:{{ site.phone }}">{{ site.phone }}</a> -->
-					<a href="https://www.linkedin.com/in/jooyoung-oh">https://www.linkedin.com/in/jooyoung-oh</a>
+					<a href="https://www.linkedin.com/in/jooyoung-oh" target="_blank">https://www.linkedin.com/in/jooyoung-oh</a>
 
 				</div>
 			</section>
 			<section>
 				<div class="contact-method">
 					<span class="icon alt fa-github"></span>
-					<h3>Github</h3>
+					<h3>GitHub</h3>
 					<span>
 					<!-- {% if site.street_address %}
 					    {{ site.street_address }}<br />
@@ -59,7 +59,7 @@
 					{% if site.country %}
 					    {{ site.country }}
 					{% endif %} -->
-					<a href={{site.street_address}}>https://github.com/7ooyoungoh</a>
+					<a href={{site.street_address}} target="_blank">https://github.com/7ooyoungoh</a>
 					</span>
 				</div>
 			</section>
