--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,8 @@
 			<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 			{% endif %}
 			{% endfor %}
-			<li><a href="https://linkedin.com/in/jooyoung-oh">LinkedIn</a></li>
-			<li><a href="https://github.com/7ooyoungoh">GitHub</a></li>
+			<li><a href="https://linkedin.com/in/jooyoung-oh" target="_blank">LinkedIn</a></li>
+			<li><a href="https://github.com/7ooyoungoh" target="_blank">GitHub</a></li>
 		</ul>
 		<ul class="actions vertical">
 			<!-- <li><a href="#" class="button special fit">Get Started</a></li>
