--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
                 <span
                         class="txt-rotate"
                         data-period="2000"
-                        data-rotate='[ "Jooyoung Oh.", "in luv w/ coding!", "not a CS major :)", "in need of sleep!" ]'></span>
+                        data-rotate='[ "Jooyoung.", "from S. Korea!", "an engineer :^)", "in need of sleep¡" ]'></span>
             </h1>
         </header>
         <div class="content">
@@ -30,9 +30,9 @@
         <div class="content">
             <ul class="actions">
                 <li><a href="assets/Resume_Jooyoung_Oh.pdf" class="button icon fa-download" target="_blank" rel="noopener noreferrer" download="Resume_Jooyoung_Oh"">Resume</a></li>
+                <li><a href="#two" class="icon alt fa-graduation-cap scrolly"></a></li>
                 <li><a href="https://github.com/7ooyoungoh" class="icon alt fa-github" target="_blank"></a></li>
                 <li><a href="https://linkedin.com/in/jooyoung-oh" class="icon alt fa-linkedin" target="_blank"></a></li>
-                <li><a href="#two" class="icon alt fa-graduation-cap scrolly"></a></li>
             </ul>
         </div>
     </div>
