--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
                 <span
                         class="txt-rotate"
                         data-period="2000"
-                        data-rotate='[ "Jooyoung", "from S. Korea!", "an engineer ;^)", "in need of sleep!" ]'></span>
+                        data-rotate='[ "Jooyoung", "from S. Korea!", "an engineer :))", "in need of sleep!" ]'></span>
             </h1>
         </header>
         <div class="content">
