--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,9 +30,9 @@
         <div class="content">
             <ul class="actions">
                 <li><a href="assets/Resume_Jooyoung_Oh.pdf" class="button icon fa-download" target="_blank" rel="noopener noreferrer" download="Resume_Jooyoung_Oh"">Resume</a></li>
-                <li><a href="#two" class="icon alt fa-graduation-cap scrolly"></a></li>
                 <li><a href="https://github.com/7ooyoungoh" class="icon alt fa-github" target="_blank"></a></li>
                 <li><a href="https://linkedin.com/in/jooyoung-oh" class="icon alt fa-linkedin" target="_blank"></a></li>
+                <li><a href="#one" class="icon alt fa-arrow-down scrolly"></a></li>
             </ul>
         </div>
     </div>
