--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -26,8 +26,11 @@
 }
 
 #two {
-	background-image: url("../images/deering_op.png");
+	background-image: url("../images/nu-red.jpg");
+	background-attachment: fixed;
 	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 
