--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -26,7 +26,7 @@
 }
 
 #two {
-	background-image: url("../images/nu-red.jpg");
+	background-image: url("../images/deering-tilted.jpg");
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
