Reposition project icons

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
                 <span
                         class="txt-rotate"
                         data-period="2000"
-                        data-rotate='[ "Jooyoung", "from S. Korea!", "an engineer :))", "in need of sleep!" ]'></span>
+                        data-rotate='[ "Jooyoung", "from S. Korea!", "an engineer :))", "in need of sleep^^" ]'></span>
             </h1>
         </header>
         <div class="content">
@@ -32,7 +32,7 @@
                 <li><a href="assets/Resume_Jooyoung_Oh.pdf" class="button icon fa-download" target="_blank" rel="noopener noreferrer" download="Resume_Jooyoung_Oh"">Resume</a></li>
                 <li><a href="https://github.com/7ooyoungoh" class="icon alt fa-github" target="_blank"></a></li>
                 <li><a href="https://linkedin.com/in/jooyoung-oh" class="icon alt fa-linkedin" target="_blank"></a></li>
-                <li><a href="#one" class="icon alt fa-arrow-down scrolly"></a></li>
+                <li><a href="#one" class="icon alt fa-search scrolly"></a></li>
             </ul>
         </div>
     </div>
