--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -26,10 +26,8 @@
 }
 
 #two {
-	background-image: url("../images/nu-red.jpg");
-	background-attachment: fixed;
+	background-image: url("../images/nu-red-dark.jpg");
 	background-position: center;
-	background-repeat: no-repeat;
 	background-size: cover;
 }
 
