--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -26,7 +26,7 @@
 }
 
 #two {
-	background-image: url("../images/nu-red-dark.jpg");
+	background-image: url("../images/nu-red-blur.jpg");
 	background-position: center;
 	background-size: cover;
 }
