--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -59,7 +59,7 @@
 					{% if site.country %}
 					    {{ site.country }}
 					{% endif %} -->
-					<a href={{site.street_address}} target="_blank">https://github.com/7ooyoungoh</a>
+					<a href={{site.street_address}} target="_blank">https://github.com/joodevs</a>
 					</span>
 				</div>
 			</section>
